--- a/app/src/main/res/layout/activity_screen_lock.xml
+++ b/app/src/main/res/layout/activity_screen_lock.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="6dp"
         android:text="Level"
         android:id="@+id/txtLevel"
         android:textColor="#f7db08"
@@ -44,7 +45,7 @@
         android:layout_height="250dp"
         android:orientation="vertical"
         android:weightSum="4"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
 
         <Button
             android:id="@+id/btnAnswerA"
@@ -106,5 +107,13 @@
             android:textColor="#ffffff"
             android:textSize="16sp"/>
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@drawable/button_custom" />
+
 
 </LinearLayout>
