--- a/app/src/main/res/drawable/nomal_button.xml
+++ b/app/src/main/res/drawable/nomal_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:angle="-90" android:startColor="@color/blue_temp"
+    <stroke android:width="1dip" android:color="@color/button_blue_border" />
+    <gradient android:angle="-90" android:startColor="@color/button_blue"
         android:endColor="@color/button_blue" />
     <corners android:radius="25dp" />
 </shape>
