--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,9 @@
     <color name="blue_temp">#84e1b8</color>
     <color name="blue_dark">#047392</color>
     <color name="bright_blue">#02D8B0</color>
-    <color name="button_blue">#10657c</color>
+    <color name="button_blue">#70073674</color>
+    <color name="button_blue_border">#073674</color>
+    <color name="button_press">#6430d974</color>
+    <color name="button_press_border">#30d974</color>
+    <color name="button_default">#73335287</color>
 </resources>
