--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="Mr. Python"
         android:textColor="#5af7e7"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:fontFamily="@font/playball_regular"
         android:visibility="visible" />
 
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal"
-        android:visibility="invisible">
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/txtInputName"
@@ -53,12 +53,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textSize="140sp"
+        android:textSize="130sp"
         android:padding="0dp"
         android:textColor="#fda90c"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/btnStartLockScreen"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:onClick="toggleLockScreen"
+        android:text="Start"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_marginBottom="10px"
+        android:textColor="#FFF"
+        android:background="@drawable/button_default"/>
+
+    <Button
+        android:id="@+id/btnLearningMode"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Learning Mode"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_marginBottom="10px"
+        android:textColor="#FFF"
+        android:background="@drawable/button_default"/>
+    <Button
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/btnTopLevel"
         android:text="Top Level"
@@ -69,7 +91,7 @@
         android:background="@drawable/button_default"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/btnShare"
         android:text="Share Level"
@@ -79,16 +101,5 @@
         android:background="@drawable/button_default"
         android:textColor="#FFF"/>
 
-    <Button
-        android:id="@+id/btnStartLockScreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toggleLockScreen"
-        android:text="Start"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginBottom="10px"
-        android:textColor="#FFF"
-        android:background="@drawable/button_default"/>
 
 </LinearLayout>
