--- a/app/src/main/res/drawable/button_default.xml
+++ b/app/src/main/res/drawable/button_default.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="1dip" android:color="@color/button_default" />
+    <stroke android:width="1dip" android:color="@color/white" />
     <gradient android:angle="-90" android:startColor="@color/button_default"
         android:endColor="@color/button_default" />
     <corners android:radius="25dp" />
