--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/background"
+    android:background="@drawable/background8"
     tools:context="com.example.mrpython.elsreen.MainActivity">
 
     <TextView
@@ -14,8 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mr. Python"
-        android:textColor="#5af7e7"
-        android:textSize="30sp"
+        android:textColor="@color/color_name"
+        android:textSize="@dimen/name_text_size_main"
         android:fontFamily="@font/playball_regular"
         android:visibility="visible" />
 
@@ -25,28 +25,31 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="gone" >
 
         <EditText
             android:id="@+id/txtInputName"
-            android:layout_width="200dp"
+            android:layout_width="@dimen/with_input_name"
             android:layout_height="wrap_content"
-            android:hint="Enter your name"
-            android:textColor="@color/blue_temp" />
+            android:hint="@string/enter_your_name"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="setName"
-            android:text="Ok" />
+            android:text="@string/ok"
+            android:background="@drawable/button_default"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Level"
-        android:textColor="#0419d4"
-        android:textSize="25sp"
+        android:text="@string/level"
+        android:textColor="@color/color_level"
+        android:textSize="@dimen/level_text_size_main"
         android:fontFamily="@font/pacifico_regular"/>
 
     <TextView
@@ -54,9 +57,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        android:textSize="110sp"
-        android:padding="0dp"
-        android:textColor="#fda90c"/>
+        android:textSize="@dimen/level_text_size_number"
+        android:padding="@dimen/padding_number_level"
+        android:textColor="@color/color_number_level"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -78,51 +82,50 @@
             android:fontFamily="@font/playball_regular"
             android:layout_marginBottom="10dp"/>
     </LinearLayout>
+
     <Button
         android:id="@+id/btnStartLockScreen"
-        android:layout_width="150dp"
+        android:layout_width="@dimen/with_btn_action"
         android:layout_height="wrap_content"
         android:onClick="toggleLockScreen"
-        android:text="Start"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginBottom="10px"
-        android:textColor="#FFF"
-        android:background="@drawable/button_default"/>
+        android:text="@string/start"
+        android:paddingLeft="@dimen/padding_btn_action"
+        android:paddingRight="@dimen/padding_btn_action"
+        android:layout_marginBottom="@dimen/layout_margin_bottom_btn_action"
+        android:background="@drawable/button_default"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/btnLearningMode"
-        android:layout_width="150dp"
+        android:layout_width="@dimen/with_btn_action"
         android:layout_height="wrap_content"
-        android:text="Learning Mode"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginBottom="10px"
-        android:textColor="#FFF"
-        android:background="@drawable/button_default"/>
+        android:text="@string/learning_mode"
+        android:paddingLeft="@dimen/padding_btn_action"
+        android:paddingRight="@dimen/padding_btn_action"
+        android:layout_marginBottom="@dimen/layout_margin_bottom_btn_action"
+        android:background="@drawable/button_default"
+        android:textColor="@color/white"/>
     <Button
-        android:layout_width="150dp"
+        android:layout_width="@dimen/with_btn_action"
         android:layout_height="wrap_content"
         android:id="@+id/btnTopLevel"
         android:onClick="topPlayer"
-        android:text="Top Level"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginBottom="10px"
-        android:textColor="#FFF"
-        android:background="@drawable/button_default"/>
+        android:text="@string/top_level"
+        android:paddingLeft="@dimen/padding_btn_action"
+        android:paddingRight="@dimen/padding_btn_action"
+        android:layout_marginBottom="@dimen/layout_margin_bottom_btn_action"
+        android:background="@drawable/button_default"
+        android:textColor="@color/white"/>
 
     <Button
-        android:layout_width="150dp"
+        android:layout_width="@dimen/with_btn_action"
         android:layout_height="wrap_content"
         android:id="@+id/btnShare"
-        android:text="Share Level"
-        android:onClick="shareImage"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_marginBottom="10px"
+        android:text="@string/share_level"
+        android:paddingLeft="@dimen/padding_btn_action"
+        android:paddingRight="@dimen/padding_btn_action"
+        android:layout_marginBottom="@dimen/layout_margin_bottom_btn_action"
         android:background="@drawable/button_default"
-        android:textColor="#FFF"/>
-
+        android:textColor="@color/white"/>
 
 </LinearLayout>
