--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/btnTopLevel"
+        android:onClick="topPlayer"
         android:text="Top Level"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
