[UPDATE] update linh tinh

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:id="@+id/txtInputName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:hint="Enter your name" />
+            android:hint="Enter your name"
+            android:textColor="@color/blue_temp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -96,6 +97,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnShare"
         android:text="Share Level"
+        android:onClick="shareImage"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:layout_marginBottom="10px"
