--- a/app/src/main/res/drawable/button_error.xml
+++ b/app/src/main/res/drawable/button_error.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#B500DF00"
-        android:endColor="#b500df00"
+    <gradient android:startColor="#a0fc4444"
+        android:endColor="#A0FC4444"
         android:angle="270" />
     <corners android:radius="20dp" />
-    <stroke android:width="2px" android:color="#02ff02" />
+    <stroke android:width="2px" android:color="#f9323f" />
 </shape>
