--- a/app/src/main/res/layout/activity_screen_lock.xml
+++ b/app/src/main/res/layout/activity_screen_lock.xml
@@ -30,6 +30,15 @@
         android:fontFamily="@font/pacifico_regular"/>
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/level_margin_vertical"
+        android:id="@+id/txtSOS"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/sos_text_size"
+        android:fontFamily="@font/pacifico_regular"/>
+
+    <TextView
         android:id="@+id/txtQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,32 +122,24 @@
             android:textStyle="italic" />
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnSOS"
-        android:text="SOS"
-        android:background="@color/sos_btn"
-        android:onClick="onSOSClick"
-        />
     <com.ebanx.swipebtn.SwipeButton
         android:id="@+id/btnSwiping"
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:inner_text="SWIPE"
+        app:inner_text="SOS"
         app:inner_text_color="@android:color/white"
         app:inner_text_size="16sp"
-        app:inner_text_top_padding="18dp"
-        app:inner_text_bottom_padding="18dp"
+        app:inner_text_top_padding="16dp"
+        app:inner_text_bottom_padding="16dp"
         app:inner_text_background="@drawable/shape_rounded"
         app:button_image_disabled="@drawable/ic_lock_open_black_24dp"
         app:button_image_enabled="@drawable/ic_lock_outline_black_24dp"
-        app:button_left_padding="20dp"
-        app:button_right_padding="20dp"
-        app:button_top_padding="20dp"
-        app:button_bottom_padding="20dp"
+        app:button_left_padding="@dimen/answer_margin_right"
+        app:button_right_padding="@dimen/answer_margin_right"
+        app:button_top_padding="@dimen/button_swipe_padding"
+        app:button_bottom_padding="@dimen/button_swipe_padding"
         app:button_background="@drawable/shape_button"
         />
 
